--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/leeshekchun/Petsagram#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bootstrap": "^5.2.0-beta1",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
